# cache-algorithms

./: Belady.cpp  Belady_main.cpp  CMakeLists.txt  LFU.cpp  LFU_main.cpp  README.md  ef_Belady_main.cpp  main.cpp  main2.cpp  prog
include/: B.hpp  Belady.hpp  L.hpp  LFU.hpp  common.hpp  ef_Belady.hpp  tests.hpp
main/: Belady_main.cpp  LFU_main.cpp
src/: Belady.cpp  LFU.cpp  ef_Belady.cpp  tests.cpp
src/main/: Belady_main.cpp  LFU_main.cpp  ef_Belady_main.cpp
tests/: Belady_tests_main.cpp  CMakeLists.txt  LFU_tests_main.cpp  ef_Belady_tests_main.cpp  efficiency_test_main.cpp
tests/include/: Belady_tests.hpp  LFU_tests.hpp  test.hpp  tests.hpp  tests_common.hpp
tests/main/: B_test_main.cpp  Belady_tests_main.cpp  LFU_tests_main.cpp  L_test_main.cpp  ef_Belady_tests_main.cpp  efficiency_test_main.cpp
tests/src/: tests.cpp
